# django_beginnings

./: db.sqlite3  manage.py  pyproject.toml
beginning/: apps.py  tests.py  urls.py  views.py
django_beginnings_project/: asgi.py  settings.py  urls.py  wsgi.py
django_beginnings_project/templates/: about.html  base.html  home.html
templates/: about.html  base.html  home.html
