[tool.poetry]
name = "django-beginnings"
version = "0.1.0"
description = ""
authors = ["Anthony Joel Williams <williamsjanthony15@yahoo.com\">"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
